{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 33,
  "lineage": "3c12fba5-62de-152c-1b9a-fc60e8a04e4f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d527b8c289b4af7f",
            "arn": "arn:aws:ec2:eu-central-1:667727374429:instance/i-045bd087ac007714d",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-045bd087ac007714d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mypublic-key_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-014455c3c5fcb6cc7",
            "private_dns": "ip-192-0-1-188.eu-central-1.compute.internal",
            "private_ip": "192.0.1.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08957b033d0ed3e47",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d3a543903b58454c",
            "tags": {
              "Name": "ec2-private-1"
            },
            "tags_all": {
              "Name": "ec2-private-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02786ba3ebb3bec0b"
            ]
          },
          "dependencies": [
            "aws_security_group.private_access",
            "module.network.aws_subnet.private-one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d527b8c289b4af7f",
            "arn": "arn:aws:ec2:eu-central-1:667727374429:instance/i-09eb2ce9fe4226e4b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09eb2ce9fe4226e4b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mypublic-key_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04c8aba39951f853a",
            "private_dns": "ip-192-0-0-52.eu-central-1.compute.internal",
            "private_ip": "192.0.0.52",
            "public_dns": "ec2-3-123-253-131.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.123.253.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0888be5b2ab86b587",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e0dca9b87eca3d84",
            "tags": {
              "Name": "ec2-public-1"
            },
            "tags_all": {
              "Name": "ec2-public-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cac0b088be630abe"
            ]
          },
          "dependencies": [
            "aws_security_group.public_access",
            "module.network.aws_subnet.public-one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elasticache_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:667727374429:security-group/sg-08c444afbb05f92be",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c444afbb05f92be",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.0.0.0/16"
                ],
                "description": "custom from VPC",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [
                  "192.0.0.0/16"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "elasticache_sg_access",
            "name_prefix": "",
            "owner_id": "667727374429",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private_access"
            },
            "tags_all": {
              "Name": "private_access"
            },
            "timeouts": null,
            "vpc_id": "vpc-03aef443b456c3a21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:667727374429:security-group/sg-02786ba3ebb3bec0b",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02786ba3ebb3bec0b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "custom from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "192.0.0.0/16"
                ],
                "description": "custom from VPC",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "192.0.0.0/16"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private_access",
            "name_prefix": "",
            "owner_id": "667727374429",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private_access"
            },
            "tags_all": {
              "Name": "private_access"
            },
            "timeouts": null,
            "vpc_id": "vpc-03aef443b456c3a21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:667727374429:security-group/sg-0cac0b088be630abe",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cac0b088be630abe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public_access",
            "name_prefix": "",
            "owner_id": "667727374429",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public_access"
            },
            "tags_all": {
              "Name": "public_access"
            },
            "timeouts": null,
            "vpc_id": "vpc-03aef443b456c3a21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "el-ip-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ecb0ea65a5485b11",
            "association_id": "eipassoc-057b216c8c5980562",
            "domain": "vpc",
            "id": "eipalloc-0ecb0ea65a5485b11",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-018aa306d568eae11",
            "private_dns": "ip-192-0-0-222.eu-central-1.compute.internal",
            "private_ip": "192.0.0.222",
            "public_dns": "ec2-3-124-202-242.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.124.202.242",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.my-getway",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-getway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:667727374429:internet-gateway/igw-0f38462dc50f57c07",
            "id": "igw-0f38462dc50f57c07",
            "owner_id": "667727374429",
            "tags": {
              "Name": "internet_getway"
            },
            "tags_all": {
              "Name": "internet_getway"
            },
            "vpc_id": "vpc-03aef443b456c3a21"
          },
          "dependencies": [
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ecb0ea65a5485b11",
            "connectivity_type": "public",
            "id": "nat-01b1bad8c51456ff9",
            "network_interface_id": "eni-018aa306d568eae11",
            "private_ip": "192.0.0.222",
            "public_ip": "3.124.202.242",
            "subnet_id": "subnet-0e0dca9b87eca3d84",
            "tags": {
              "Name": "gw NAT 1"
            },
            "tags_all": {
              "Name": "gw NAT 1"
            }
          },
          "dependencies": [
            "module.network.aws_eip.el-ip-1",
            "module.network.aws_internet_gateway.my-getway",
            "module.network.aws_subnet.public-one",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "root-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:667727374429:route-table/rtb-091038d6d7fd611c2",
            "id": "rtb-091038d6d7fd611c2",
            "owner_id": "667727374429",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01b1bad8c51456ff9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "timeouts": null,
            "vpc_id": "vpc-03aef443b456c3a21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.el-ip-1",
            "module.network.aws_internet_gateway.my-getway",
            "module.network.aws_nat_gateway.nat1",
            "module.network.aws_subnet.public-one",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "root-public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:667727374429:route-table/rtb-0671dd4473990d39e",
            "id": "rtb-0671dd4473990d39e",
            "owner_id": "667727374429",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f38462dc50f57c07",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public1"
            },
            "tags_all": {
              "Name": "public1"
            },
            "timeouts": null,
            "vpc_id": "vpc-03aef443b456c3a21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.my-getway",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046fdc23e7e9b6f1e",
            "route_table_id": "rtb-091038d6d7fd611c2",
            "subnet_id": "subnet-0d3a543903b58454c"
          },
          "dependencies": [
            "module.network.aws_eip.el-ip-1",
            "module.network.aws_internet_gateway.my-getway",
            "module.network.aws_nat_gateway.nat1",
            "module.network.aws_route_table.root-private-1",
            "module.network.aws_subnet.private-one",
            "module.network.aws_subnet.public-one",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a-private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a18aea00590c5b53",
            "route_table_id": "rtb-091038d6d7fd611c2",
            "subnet_id": "subnet-09966dd034ce54d9a"
          },
          "dependencies": [
            "module.network.aws_eip.el-ip-1",
            "module.network.aws_internet_gateway.my-getway",
            "module.network.aws_nat_gateway.nat1",
            "module.network.aws_route_table.root-private-1",
            "module.network.aws_subnet.private-two",
            "module.network.aws_subnet.public-one",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a-public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aed52a4d69ba31ff",
            "route_table_id": "rtb-0671dd4473990d39e",
            "subnet_id": "subnet-0e0dca9b87eca3d84"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.my-getway",
            "module.network.aws_route_table.root-public1",
            "module.network.aws_subnet.public-one",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a-public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00502e6449ee4d18e",
            "route_table_id": "rtb-0671dd4473990d39e",
            "subnet_id": "subnet-0329fb0c39e32c8bc"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.my-getway",
            "module.network.aws_route_table.root-public1",
            "module.network.aws_subnet.public-two",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:667727374429:subnet/subnet-0d3a543903b58454c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "192.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3a543903b58454c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667727374429",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-private-one"
            },
            "tags_all": {
              "Name": "prod-private-one"
            },
            "vpc_id": "vpc-03aef443b456c3a21"
          },
          "dependencies": [
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:667727374429:subnet/subnet-09966dd034ce54d9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "192.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09966dd034ce54d9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667727374429",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-private-two"
            },
            "tags_all": {
              "Name": "prod-private-two"
            },
            "vpc_id": "vpc-03aef443b456c3a21"
          },
          "dependencies": [
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:667727374429:subnet/subnet-0e0dca9b87eca3d84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "192.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0dca9b87eca3d84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "667727374429",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-public-one"
            },
            "tags_all": {
              "Name": "prod-public-one"
            },
            "vpc_id": "vpc-03aef443b456c3a21"
          },
          "dependencies": [
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:667727374429:subnet/subnet-0329fb0c39e32c8bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "192.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0329fb0c39e32c8bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "667727374429",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-public-two"
            },
            "tags_all": {
              "Name": "prod-public-two"
            },
            "vpc_id": "vpc-03aef443b456c3a21"
          },
          "dependencies": [
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:667727374429:vpc/vpc-03aef443b456c3a21",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.0.0.0/16",
            "default_network_acl_id": "acl-0ca69032a89377902",
            "default_route_table_id": "rtb-0919f2125b34b9167",
            "default_security_group_id": "sg-09877f5bd2f4957ad",
            "dhcp_options_id": "dopt-0a8a05356fe501b89",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03aef443b456c3a21",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0919f2125b34b9167",
            "owner_id": "667727374429",
            "tags": {
              "Name": "prod"
            },
            "tags_all": {
              "Name": "prod"
            }
          }
        }
      ]
    }
  ]
}